--- a/templates/pages/add_product.html
+++ b/templates/pages/add_product.html
@@ -13,13 +13,12 @@
     <link rel="stylesheet" href="allproducts.css">
     <script src="https://kit.fontawesome.com/332a215f17.js" crossorigin="anonymous"></script>
 </head>
-<body>
-<h2 style=position:absolute;left:45%; >Add product: </h2> <br>
+<body><br>
+<h2 style=position:absolute;left:43%; >Add product: </h2> <br>
 <form action="/products/add" method="POST"style=position:absolute;left:40%; ><br><br>
     Name : <input type="text" name="name"style=position:absolute;left:100%; ><br><br>
     Price: <input type="text" name="price"style=position:absolute;left:100%; ><br><br>
-    Creation date : <input type="text" name="creation_date" style=position:absolute;left:100%;><br><br>
-    <input type="submit" name="add" value="Add" style=position:absolute;left:240%;>
+    <input type="submit" class="btn btn-success" name="add" value="Add" style=position:absolute;left:340%;>
 </form>
 </body>
 </html>
