--- a/templates/pages/updateproduct.html
+++ b/templates/pages/updateproduct.html
@@ -4,19 +4,14 @@
     <meta charset="UTF-8"/>
     <title>Update user</title>
 </head>
-<style>
-   body {
-    background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTE4ztBvW7DIMEfDHGwspSG2Po-Yz700UUOa_wC1_1YIFF7rAkUcoTNYm8rUmo4aY7k-JQ&usqp=CAU);
-   }
-  </style>
 <body>
-<h1>Update product! </h1>
-<form action="/update" method="POST">
+<h1>Update product: </h1>
+<form action="/products/update" method="POST">
     name : <input type="text" name="name" style=position:absolute;left:10%;/ ><br><br>
     price : <input type="text" name="price" style=position:absolute;left:10%;/ ><br><br>
-    creationdate : <input type="text" name="creationdate" style=position:absolute;left:10%;/ ><br><br>
+    creation_date : <input type="text" name="creation_date" style=position:absolute;left:10%;/ ><br><br>
     id : <input type="text" name="id" style=position:absolute;left:10%;/ ><br><br>
-    <input type="submit" name="update" value="Update"/>
+    <input type="submit"  name="update" value="Update"/>
 </form>
 </body>
 </html>
