--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -14,7 +14,7 @@
 <br><br>
 <form action="/login" method="POST" style=position:absolute;left:40%;>
     <h1>Login:</h1>
-    Login     : <input type="text" name="email"style=position:absolute;left:68%;/><br><br>
+    Login     : <input type="text" name="login"style=position:absolute;left:68%;/><br><br>
     Password : <input type="text" name="password" style=position:absolute;left:68%;/><br><br>
     <input type="submit"  class="btn btn-success"  name="Submit" value="Submit"/>
 </form>
