--- a/templates/pages/add_product.html
+++ b/templates/pages/add_product.html
@@ -14,11 +14,15 @@
     <script src="https://kit.fontawesome.com/332a215f17.js" crossorigin="anonymous"></script>
 </head>
 <body><br>
+
+
 <h2 style=position:absolute;left:43%; >Add product: </h2> <br>
 <form action="/products/add" method="POST"style=position:absolute;left:40%; ><br><br>
     Name : <input type="text" name="name"style=position:absolute;left:100%; ><br><br>
     Price: <input type="text" name="price"style=position:absolute;left:100%; ><br><br>
-    <input type="submit" class="btn btn-success" name="add" value="Add" style=position:absolute;left:340%;>
+    <input type="submit" class="btn btn-danger" name="add" value="Add" style=position:absolute;left:100%;>
+    <a href="/products" method="POST" style=position:absolute;left:230%; ><button type="button" class="btn btn-success" >Return</button></a>
+
 </form>
 
 <#if myOptionalVar??>
