refactored deleteproduct.html

--- a/templates/pages/deleteproduct.html
+++ b/templates/pages/deleteproduct.html
@@ -14,10 +14,13 @@
     <script src="https://kit.fontawesome.com/332a215f17.js" crossorigin="anonymous"></script>
 </head>
 <body>
+<br></br>
 <h2 style=position:absolute;left:47%; >Delete product </h2>
 <form action="/products/delete" method="POST"  style=position:absolute;left:47%;><br><br>
-    Id : <input type="text" name="id" style=position:absolute;left:6%;/ ><br><br>
-    <input type="submit" name="delete" value="Delete"style=position:absolute;left:40%;/>
+    Id : <input type="text" name="id" style=position:absolute;left:110%;/ ><br><br>
+    <input type="submit" name="delete" class="btn btn-danger" value="Delete"style=position:absolute;left:140%;/>
+    <a href="/products" method="POST" style=position:absolute;left:520%; ><button type="button" class="btn btn-success" >Return</button></a>
+
 </form>
 </body>
 </html>
