refactored allproducts.html

--- a/templates/pages/allproducts.html
+++ b/templates/pages/allproducts.html
@@ -35,20 +35,18 @@
                 <li class="nav-element">
                     <a class="nav-link">Products</a>
                 </li>
+                <li class="nav-element">
+                    <a class="nav-link">Services</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown">
                         Admin
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Add product</a></li>
-                        <li><a class="dropdown-item" href="#">Update product</a></li>
-                        <li><a class="dropdown-item" href="#">Delete product</a></li>
-                        <li><a class="dropdown-item" href="#">Search product</a></li>
+                        <li><a class="dropdown-item" href="#">Products</a></li>
+                        <li><a class="dropdown-item" href="#">Services</a></li>
                     </ul>
-                </li>
-                <li class="nav-element">
-                    <a href="#" class="nav-link">Sign up</a>
                 </li>
             </ul>
             <li class="nav-element">
@@ -76,6 +74,8 @@
 
 <!-- Section of products-->
 <a href="/products/add" ><button type="button" class="btn btn-primary" style=position:absolute;left:80%; >CREATE PRODUCT</button></a><br>
+<p></p>
+<a href="/products/update" ><button type="button" class="btn btn-secondary"style=position:absolute;left:80%; >UPDATE PRODUCT</button></a><br>
 <section class="products">
     <div class="container">
         <div class="row">
