Delete all xml files. Add RootConfig, DataSourceConfig, WebConfig. Adjust tests with @ContextConfiguration. Transfer cookie logic from SecurityService to LoginController and SecurityFilter. Use Optional as return type to avoid null as result.

--- a/src/main/resources/templates/pages/allproducts.html
+++ b/src/main/resources/templates/pages/allproducts.html
@@ -102,6 +102,7 @@
                 <td>
                     <a href="/products/update" method="POST" ><button type="button" class="btn btn-success" >EDIT</button></a>
                     <a href="/products/delete" ><button type="button" class="btn btn-danger">DELETE</button></a>
+                    <a href="/products/add" ><button type="button" class="btn btn-danger">ADD</button></a>
                 </td>
             </tr>
             </#list>
