--- a/src/main/resources/templates/pages/cart.html
+++ b/src/main/resources/templates/pages/cart.html
@@ -8,9 +8,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- allproducts_shop CSS -->
+    <!-- cart_shop CSS -->
     <title>Online-Shop</title>
-    <link rel="stylesheet" href="allproducts.css">
+    <link rel="stylesheet" href="cart.css">
 
     <!-- fonts from fonts.google.com-->
     <script src="https://kit.fontawesome.com/53bc8d5a3b.js" crossorigin="anonymous"></script>
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto">
                 <li class="nav-element">
-                    <a class="nav-link">Home</a>
+                    <a href="/products" class="nav-link">Home</a>
                 </li>
                 <li class="nav-element">
                     <a href="#" class="nav-link">About us</a>
@@ -44,13 +44,13 @@
                         Admin
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/products">Products</a></li>
+                        <li><a class="dropdown-item" href="#">Products</a></li>
                         <li><a class="dropdown-item" href="#">Services</a></li>
                     </ul>
                 </li>
             </ul>
             <li class="nav-element">
-                <a href="/products/cart" class="nav-link"><i class="fas fa-shopping-cart fa-2x"></i></a>
+                <a href="#" class="nav-link"><i class="fas fa-shopping-cart fa-2x"></i></a>
             </li>
 
         </div>
@@ -58,27 +58,12 @@
 </nav>
 <!-- End of Navigation bar-->
 
-<!-- Section of search-->
-<section class="search py-5">
-    <div class="container">
-        <div class="row">
-            <div class="text-center mx-auto col-sm-6">
-                <form class="d-flex" action="/products/search" method="GET">
-                    <input class="form-control me-2" type="search"  name="searchText" placeholder="Search product">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-</section>
-<!-- End of search Section-->
-
 <!-- Section of products-->
-<a href="/products/add" ><button type="button" class="btn btn-primary" style=position:absolute;left:80%; >CREATE PRODUCT</button></a><br>
 <section class="products">
     <div class="container">
         <div class="row">
             <div class="col-10 text-center mx-auto col-sm-6">
-                <h1 class="product-title">Available products</h1>
+                <h1 class="product-title">Products in cart</h1>
             </div>
         </div>
 
@@ -88,7 +73,6 @@
                 <th scope="col">Id</th>
                 <th scope="col">Name</th>
                 <th scope="col">Price</th>
-                <th scope="col">Creation Date</th>
                 <th scope="col">Actions</th>
             </tr>
             </thead>
@@ -98,11 +82,9 @@
                 <td >${product.getId()}</td>
                 <td>${product.getName()}</td>
                 <td>${product.getPrice()}</td>
-                <td>${product.getCreationDate()}</td>
                 <td>
-                    <a href="/products/update" method="POST" ><button type="button" class="btn btn-success" >EDIT</button></a>
-                    <a href="/products/delete" ><button type="button" class="btn btn-danger">DELETE</button></a>
-                    <a href="/products/cart/add" ><button type="button" class="btn btn-success">ADD TO CART</button></a>
+                    <a href="/products/buy" method="POST" ><button type="button" class="btn btn-success" >BUY</button></a>
+                    <a href="/products/cart/delete" method="POST" ><button type="button" class="btn btn-danger">DELETE FROM CART</button></a>
                 </td>
             </tr>
             </#list>
