Fix shopping cart: - connect user to personal cart; - add cartService; - add CurrentUser with ThreadLocal<User>; - adjust tests to new logic.

--- a/src/main/resources/templates/pages/cart.html
+++ b/src/main/resources/templates/pages/cart.html
@@ -59,7 +59,7 @@
 <!-- End of Navigation bar-->
 
 <!-- Section of products-->
-<section class="products">
+<section class="cart">
     <div class="container">
         <div class="row">
             <div class="col-10 text-center mx-auto col-sm-6">
@@ -77,7 +77,7 @@
             </tr>
             </thead>
             <tbody>
-            <#list products as product>
+            <#list cart as product>
             <tr align="center" width="50%" border="1" >
                 <td >${product.getId()}</td>
                 <td>${product.getName()}</td>
